# itune

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test-package.yml
docs/source/: conf.py  index.rst
examples/: favourite_number.py
itune/: __init__.py  app.py  choose.py
rlhf_wizard/: __init__.py  app.py
tests/: test_choose.py  test_itune.py  test_rlhf_wizard.py
