[tool.poetry]
name = "itune"
version = "0.1.0"
description = ""
authors = ["Paul Lam <paul@quantisan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
