[tool.poetry]
name = "itune"
version = "0.3.0"
description = "i tune your parameters so you don't have to"
authors = ["Paul Lam <paul@quantisan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
